--- a/projects/ngx-ramblers/src/app/modules/common/dynamic-content/dynamic-content.sass
+++ b/projects/ngx-ramblers/src/app/modules/common/dynamic-content/dynamic-content.sass
@@ -67,3 +67,14 @@
 
 .youtube-embed-preview iframe
   pointer-events: none
+
+.album-preview-toggle-group
+  .preset-btn
+    flex: 1 1 0
+    border: 1px solid var(--ramblers-colour-sunrise)
+    color: var(--ramblers-colour-granite)
+    background-color: #fff
+  .preset-btn.active
+    background-color: var(--ramblers-colour-sunrise)
+    border-color: var(--ramblers-colour-sunrise)
+    color: var(--ramblers-colour-black)
