--- a/projects/ngx-ramblers/src/app/pages/banner/banner-logo/banner-logo.html
+++ b/projects/ngx-ramblers/src/app/pages/banner/banner-logo/banner-logo.html
@@ -1,3 +1,3 @@
 <img [src]="urlService.imageSource(image?.awsFileName)" [alt]="image?.originalFileName"
      class="img-fluid"
-     [ngStyle]="{'padding.px': image?.padding}">
+     [ngStyle]="imageStyles()">
