--- a/projects/ngx-ramblers/src/app/pages/walks/walk-view/walk-view.sass
+++ b/projects/ngx-ramblers/src/app/pages/walks/walk-view/walk-view.sass
@@ -5,8 +5,8 @@
   margin: 10px
 
 .map-radio-frame
-  padding: 14px 10px 12px 21px
-  margin: -9px 0px 15px
+  padding: 18px 15px 12px 15px
+  margin: -6px 0 15px 0
 
 .postcode-input
   width: 120px
