feat(deploy,committee): import Fly.io secrets from database and fix sub-tab URL persistence (ref: #125)

--- a/projects/ngx-ramblers/src/app/assets/styles/markdown.sass
+++ b/projects/ngx-ramblers/src/app/assets/styles/markdown.sass
@@ -56,3 +56,11 @@
   text-decoration: none
   color: $ramblers-colour-granite
 
+.mermaid
+  overflow-x: auto
+  text-align: center
+
+  svg
+    max-width: 100%
+    height: auto
+
