--- a/projects/ngx-ramblers/src/app/footer/footer.sass
+++ b/projects/ngx-ramblers/src/app/footer/footer.sass
@@ -1,5 +1,9 @@
 @import "../assets/styles/colours"
 
+:host
+  display: block
+  margin-top: 14px
+
 .bg-dark
   background-color: $ramblers-colour-granite !important
 
